# Laplacean

./: .env  .gitignore  TODO.md  braindump.md  pyproject.toml
laplacean/: hmc.py  hmc_python.py
laplacean/backend/: base.py  jax_hmc.py  potential_energy.py
laplacean/src/base/: data.py
laplacean/src/methods/: hmc.py  potential_energy.py
laplacean/src/sampler/: sampling.py
laplacean/tests/: test_base.py
laplacean/tests/dev/: examples.py  regression_example.py  unit_normal_example.py
src/: logging_utils.py  util.py
src/base/: data.py  functions.py
src/methods/: bayesian_execution_network.py  bayesian_network_v2.py  hmc.py  potential_energy.py
src/sampler/: sampling.py
tests/: jax_examples.ipynb  test_data.py  test_hmc_step.py  test_network.py  test_potential_energy.py  test_sampler.py  test_utils.py
tests/dev/: 8_schools_example.py  8_schools_example_v2.py  mmap_benchmark.py  regression_example.py  unit_normal_example.py  unit_normal_v2.py  unit_normal_with_data.py  unit_normal_with_data_v2.py
