[tool.poetry]
name = "laplacean"
version = "0.1.0"
description = ""
authors = ["Stefan Skoruppa <Stefan.sko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jax = "^0.4.28"
jaxlib = "^0.4.28"
jaxtyping = "^0.2.28"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
