[tool.poetry]
name = "laplacean"
version = "0.1.0"
description = ""
authors = ["Stefan Skoruppa <Stefan.sko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jax = "^0.4.28"
jaxlib = "^0.4.28"
jaxtyping = "^0.2.28"
jax_dataclasses = "^1.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.5.4"
mypy = "^1.11.0"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
ignore = [
    "E501",  # Ignore line length errors
    "E203",  # Whitespace before ':'
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
show_column_numbers = true
show_error_codes = true
strict_optional = true
