[tool.poetry]
name = "Laplacean"
version = "0.1.0"
description = ""
authors = ["Stefan Skoruppa <Stefan.sko@gmail.com>"]
readme = "README.md"
packages = [
    { include = "base", from = "src" },
    { include = "methods", from = "src" },
    { include = "sampler", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
jax = "^0.4.28"
jaxlib = "^0.4.28"
jaxtyping = "^0.2.28"
jax_dataclasses = "^1.6.1"
returns = "0.23.0"
equinox = "^0.11.7"
pytest = "^8.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.5.4"
mypy = "^1.11.0"
seaborn = "^0.13.2"
jupyter = "^1.0.0"

[tool.poetry.group.experiments.dependencies]
torch = "^2.2.1"
numpy = "^2.0.4"
psutil = "^5.9.8"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
ignore = [
    "E501",  # Ignore line length errors
    "E203",  # Whitespace before ':'
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
show_column_numbers = true
show_error_codes = true
strict_optional = true
